add item list, add fileMng, save items in file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
 	<string name="flag">flag</string>
 	<string name="next">Next</string>
 	<string name="previous">Previous</string>
+	<string name="file_name">plan</string>
 
 </resources>
